--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "link",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,13 +13,20 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "cross-env REACT_APP_BUILD=dev react-scripts start",
+    "art": "cross-env REACT_APP_BUILD=art react-scripts start",
+    "photo": "cross-env REACT_APP_BUILD=photo react-scripts start",
+    "build:dev": "cross-env REACT_APP_BUILD=dev react-scripts build",
+    "build:art": "cross-env REACT_APP_BUILD=art react-scripts build",
+    "build:photo": "cross-env REACT_APP_BUILD=photo react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
